[gd_scene load_steps=14 format=3 uid="uid://cmsrvm3g0md55"]

[ext_resource type="Texture2D" uid="uid://cfjldetwwqu0m" path="res://assets/sprites/clinica.png" id="1_1wcae"]
[ext_resource type="Script" path="res://scripts/clinica.gd" id="1_au8xu"]
[ext_resource type="Texture2D" uid="uid://ufj18uldtni7" path="res://assets/sprites/clinica sin coso.png" id="2_hq364"]
[ext_resource type="Texture2D" uid="uid://bhrtsoc7etuby" path="res://assets/sprites/coso de clinica.png" id="3_cwih7"]
[ext_resource type="Texture2D" uid="uid://dnesxjrtjwbbr" path="res://assets/sprites/botones/Menu_principal.png" id="5_vgasl"]
[ext_resource type="Texture2D" uid="uid://b7pptg7shkgno" path="res://assets/sprites/botones/Boton_Clinica.png" id="6_xka2h"]
[ext_resource type="Texture2D" uid="uid://bxyi7siyb51nt" path="res://assets/sprites/botones/Boton_salud_clinica.png" id="7_5b58q"]
[ext_resource type="Texture2D" uid="uid://c5j6rhh5o824r" path="res://assets/sprites/Dana/Dana_sentada.png" id="8_sfjrh"]
[ext_resource type="Texture2D" uid="uid://cu627xwnhmdoi" path="res://assets/sprites/fichamedica.png" id="9_tf5q3"]
[ext_resource type="Texture2D" uid="uid://d8w1aapywsjc" path="res://assets/sprites/botones/botoncerrar.png" id="10_la340"]
[ext_resource type="FontFile" uid="uid://dflf6hi73clnm" path="res://assets/font/retropix.otf/retropix.otf" id="11_7jfqq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tpfig"]
atlas = ExtResource("6_xka2h")
region = Rect2(270, 91, 1000, 344)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoth3"]
atlas = ExtResource("6_xka2h")
region = Rect2(270, 552.5, 1000, 347.625)

[node name="Clinica" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_au8xu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1wcae")
expand_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hq364")
expand_mode = 5

[node name="Boton_Ficha_medica" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 365.0
offset_right = 490.0
offset_bottom = 628.0
texture_normal = ExtResource("3_cwih7")
ignore_texture_size = true
stretch_mode = 5

[node name="Boton_Menu_princiál" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -383.0
offset_top = -133.0
offset_right = 40.0
offset_bottom = 338.0
grow_horizontal = 2
texture_normal = ExtResource("5_vgasl")
ignore_texture_size = true
stretch_mode = 0

[node name="Boton_suero" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 917.0
offset_right = 661.0
offset_bottom = 1053.0
texture_normal = SubResource("AtlasTexture_tpfig")
ignore_texture_size = true
stretch_mode = 5

[node name="Boton_salud_clinica" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 86.0
offset_top = 889.0
offset_right = 701.0
offset_bottom = 1217.0
texture_normal = ExtResource("7_5b58q")
ignore_texture_size = true
stretch_mode = 5

[node name="Boton_antidoto" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.028
offset_left = 181.0
offset_top = 1027.0
offset_right = 563.84
offset_bottom = 1223.0
texture_normal = SubResource("AtlasTexture_xoth3")
ignore_texture_size = true
stretch_mode = 5

[node name="Dana_clinica" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 492.0
offset_right = 188.0
offset_bottom = 516.0
scale = Vector2(31.0023, 14.5925)
texture_normal = ExtResource("8_sfjrh")
ignore_texture_size = true
stretch_mode = 0

[node name="Ficha_Medica" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Ficha_Medica"]
layout_mode = 1
anchors_preset = -1
anchor_right = 11.314
anchor_bottom = 10.889
offset_left = -7.0
offset_top = 208.0
offset_right = 298.44
offset_bottom = 730.44
texture = ExtResource("9_tf5q3")
expand_mode = 1
stretch_mode = 5

[node name="cerrar" type="TextureButton" parent="Ficha_Medica"]
layout_mode = 0
offset_left = 461.0
offset_top = 468.0
offset_right = 675.0
offset_bottom = 556.0
texture_normal = ExtResource("10_la340")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="Ficha_Medica"]
offset_left = 274.0
offset_top = 477.0
offset_right = 421.0
offset_bottom = 557.0
theme_override_colors/font_color = Color(0.227451, 0.14902, 0.117647, 1)
theme_override_fonts/font = ExtResource("11_7jfqq")
theme_override_font_sizes/font_size = 70
text = "Dana
"
autowrap_mode = 1

[connection signal="pressed" from="Boton_Ficha_medica" to="." method="_on_boton_ficha_medica_pressed"]
[connection signal="pressed" from="Boton_Menu_princiál" to="." method="_on_menu_princil_pressed"]
[connection signal="pressed" from="Boton_suero" to="." method="_on_boton_suero_pressed"]
[connection signal="pressed" from="Boton_salud_clinica" to="." method="_on_boton_salud_clinica_pressed"]
[connection signal="pressed" from="Boton_antidoto" to="." method="_on_boton_antidoto_pressed"]
[connection signal="pressed" from="Ficha_Medica/cerrar" to="." method="_on_cerrar_pressed"]
